--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@tanstack/react-query": "^5.89.0",
+    "@tanstack/react-query-devtools": "^5.90.2",
     "axios": "^1.12.2",
     "formik": "^2.4.6",
     "modern-normalize": "^3.0.1",
